2005-09-30  Andreas Kupries <andreask@activestate.com>

	* ipMore.test:  Integrated Aamer Akhter's extended
	* ipMore.tcl:   conversion and manipulation commands
	* ipMoreC.tcl:  for ip-addresses and -masks. See the
	* msmgs/en.msg: [SF Tcllib Patch 1260196]. Extended the
	* ip.man:       documentation, testsuite, critcl setup.

2005-05-21  Pat Thoyts  <pat@zsplat.freeserve.co.uk>

	* dns.tcl: Added support for ceptcl as well as tcludp for udp
	support.

2005-05-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ip.tcl:   Added some support for acceping RFC3056 6to4 addresses
	* ip.test:  of the form 2002:<ipv4 address>::/48

2005-04-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dns.tcl (TcpEvent): Fixed [SF Tcllib Bug 1173444]. The cause was
	  a series of typos, the procedure argument 'token' was referenced
	  to in the code via 'tok'.

2004-11-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl:     Fixed bug in ReadUShort.
	
	* dns.tcl:     Incremented the version to 1.2.1 and updated the
	* ip.tcl:      manual. 
	
	* dns.tcl:     Added support for RFC2782 (DNS SRV) which provides
	               for service discovery via DNS. 
		       Added dns::nameservers command to return the list
	               of nameservers configured -- this is not
	               necessarily all that reliable but should be useful.
		       Implemented for Windows and Unix.

	* ip.tcl:      Added an error message to deal with invalid address
	               formats during normalization.
	
2004-11-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ip.tcl:       Bug #1060460 - support for IPv4 in IPv6-style
	                addresses in ip::normalize.

2004-10-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl:       Applied fix for bug #1018934 "incorrectly
	                 detecting query as a reverse lookup"

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*